# home-tutor

./: .gitignore  README.md
server/: .env.example  README.md  pyproject.toml
server/schemas/: README.md  ocr-session.v1.schema.json  question-package.v1.schema.json  session-meta.v1.schema.json  session-timeline-index.v1.schema.json  tutor-content.v1.schema.json  tutor-session-context.v1.schema.json
server/scripts/: sync_fixture_sessions.py
server/src/home_tutor/: __init__.py  main.py
server/src/home_tutor/api/: __init__.py  deps.py
server/src/home_tutor/core/: __init__.py  config.py  logging.py
server/src/home_tutor/models/: __init__.py  database.py  review.py  schemas.py  session.py  tutor_session_context.py
server/tests/: conftest.py  test_a2ui_builder.py  test_analysis_service.py  test_context_assembler.py  test_copilot_endpoint.py  test_copilot_graph.py  test_health.py  test_langfuse_tracing.py  test_llm_client.py  test_llm_config.py  test_logging.py  test_materializer.py  test_session_api.py  test_session_seed.py  test_session_store_index.py  test_session_sync.py  test_speech_gateway.py  test_split_fixture.py  test_tutor_analysis_api.py  test_tutor_analysis_policy.py  test_tutor_generator.py
server/tests/assets/: 人教版2025-2026学年小学六年级数学上册期末测试卷.docx
server/tests/fixtures/: __init__.py  answer_sheets.py  exam_g6_final_2025.py  exam_mcq_choices.py  exam_scoring.py  extract_exam_choices.py  generate_tutor_mock.py  mock_ocr_session_builder.py  profile_factory.py  regenerate_all_fixtures.py  split_ocr_session_fixture.py  tutor_templates.py
(+467 files in other folders)
