[project]
name = "home-tutor-server"
version = "0.1.0"
description = "Home Tutor backend — data analysis and LLM content generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiortc>=1.14.0",
    "httpx>=0.28.0",
    "fastapi>=0.138.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "langfuse>=3.0.0",
    "structlog>=24.0.0",
    "copilotkit>=0.1.94",
]

[project.scripts]
dev = "home_tutor.main:run_dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/home_tutor"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "python-docx>=1.2.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
